--- a/pretix_stay22/templates/pretix_stay22/order_info.html
+++ b/pretix_stay22/templates/pretix_stay22/order_info.html
@@ -7,6 +7,6 @@
         </h3>
     </div>
     <div class="panel-body">
-        <iframe id="stay22-widget" width="100%" height="460" frameborder="0" src="https://www.stay22.com/embed/gm?{{ params }}"></iframe>
+        <iframe id="stay22-widget" width="100%" height="460" frameborder="0" src="{{ url }}"></iframe>
     </div>
 </div>
