--- a/pretix_stay22/templates/pretix_stay22/order_info.html
+++ b/pretix_stay22/templates/pretix_stay22/order_info.html
@@ -6,7 +6,21 @@
             {% trans "Book a hotel" %}
         </h3>
     </div>
-    <div class="panel-body">
-        <iframe id="stay22-widget" width="100%" height="460" frameborder="0" src="{{ url }}"></iframe>
+    <div class="panel-body{% if click_to_load %} contains-overlay{% endif %}">
+        <iframe id="stay22-widget" width="100%" height="460" frameborder="0" src="{% if click_to_load %}about:blank{% else %}{{ url }}{% endif %}"></iframe>
+    {% if click_to_load %}
+        <div class="overlay overlay-centered">
+            <div class="overlay-content">
+                <p class="text-center"><a href="{{ url }}" class="btn btn-primary overlay-remove" data-click-to-load="stay22-widget">{% trans "Book a hotel" %}</a></p>
+                <p class="text-muted text-center">
+                    {% trans "This service uses 3rd-party content. By clicking the button above you agree to sharing some personal information." %}
+                    {% if privacy_url %}
+                    <br>
+                    <a href="{{ privacy_url }}">{% trans "For further info see our privacy statement." %}</a>
+                    {% endif %}
+                </p>
+            </div>
+        </div>
+    {% endif %}
     </div>
 </div>
