add link to stay22-privacy policy as fallback

--- a/pretix_stay22/templates/pretix_stay22/order_info.html
+++ b/pretix_stay22/templates/pretix_stay22/order_info.html
@@ -13,10 +13,12 @@
             <div class="overlay-content">
                 <p class="text-center"><a href="{{ url }}" class="btn btn-primary overlay-remove" data-click-to-load="stay22-widget">{% trans "Book a hotel" %}</a></p>
                 <p class="text-muted text-center">
-                    {% trans "This service uses 3rd-party content. By clicking the button above you agree to sharing some personal information." %}
-                    {% if privacy_url %}
+                    {% trans "This service uses 3rd-party content provided by stay22. By clicking the button above you agree to sharing some personal information." %}
                     <br>
+                    {% if privacy_url %}
                     <a href="{{ privacy_url }}">{% trans "For further info see our privacy statement." %}</a>
+                    {% else %}
+                    <a href="https://www.stay22.com/privacy/">{% trans "For further info see stay22’s privacy policy." %}</a>
                     {% endif %}
                 </p>
             </div>
